--- a/scss/main.scss
+++ b/scss/main.scss
@@ -56,7 +56,7 @@ main {
 
 .item-card {
     height: auto;
-    width: 100%;
+    width: 70%;
 
     display: flex;
     flex-direction: row;
@@ -65,6 +65,7 @@ main {
     border-radius: 3rem;
     margin: 2rem;
     background-color: white;
+    padding: 1rem;
 
     box-sizing: border-box;
 
@@ -80,4 +81,13 @@ main {
     &:last-child {
         padding-right: 2rem !important;
     }
+}
+
+.vertical-list {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
